--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pixel_perfect: any
+  url_launcher: ^6.2.2
+  sqflite: ^2.3.0
+  image_picker: ^1.0.6
+  path_provider: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +67,7 @@ flutter:
   assets:
      - assets/icons/
      - assets/images/
+     - assets/images/podcast/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
