--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^2.3.0
   image_picker: ^1.0.6
   path_provider: ^2.0.2
+  provider: 6.1.1
 
 dev_dependencies:
   flutter_test:
