--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   pixel_perfect: any
   url_launcher: ^6.2.2
   sqflite: ^2.3.0
-  image_picker: ^1.0.6
+  image_picker: ^0.8.4+2
   path_provider: ^2.0.2
   provider: 6.1.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
