sport page is added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
      - assets/images/quiz/
      - assets/images/hobby/
      - assets/images/proforintation/
+     - assets/images/sport/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
